data/all_generated_tests/raw_wast_tests/call_indirect_EdgeCaseFailuresinbr_table_4612.wast
;; 1. **Test Description**: Provide an operand stack with incorrect index bounds for the `br_table` instruction to see if a trap occurs. This test checks if both implementations correctly handle out-of-bounds checks when the index provided exceeds the available targets.    - **Constraint**: The index provided must be out of the range of targets defined.    - **Edge Case Relation**: Ensures that implementations properly issue a trap when index bounds are violated.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (table funcref (elem 0))
    (func $index-out-of-bounds
      (call_indirect (type $sig) (i32.const 1) (i32.const 0))
    )
  )
  "type mismatch"
)